# xfce4-eyes-plugin

./: .gitignore  .scan-build-false-positives  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build
icons/: Makefile.am  meson.build
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/36x36/: Makefile.am
icons/48x48/: Makefile.am
panel-plugin/: Makefile.am  eyes.c  eyes.desktop.in  eyes.desktop.in.in  eyes.h  meson.build  themes.c  themes.h
po/: .intltool-merge-cache  ChangeLog  LINGUAS  POTFILES.in  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  (+35 more)
themes/: Makefile.am  meson.build
themes/Bizarre/: Makefile.am
themes/Bloodshot/: Makefile.am
themes/Chibi/: Makefile.am  config
themes/Chibi-large/: Makefile.am  config
themes/Default/: Makefile.am
themes/Default-tiny/: Makefile.am
themes/Horrid/: Makefile.am  config
themes/Tango/: Makefile.am  config
